--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "author": "Marko Markovikj, Petar Tosevski",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^10.6.0",
-    "jquery": "^3.6.0"
+  "devDependencies": {
+    "cypress": "^10.6.0"
   }
 }
