--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marko Markovikj, Petar Tosevski",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^10.6.0"
+    "cypress": "^10.6.0",
+    "cypress-xpath": "^2.0.1"
   }
 }
