--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@4tw/cypress-drag-drop": "^2.2.1",
 		"cypress": "^10.6.0",
+		"cypress-downloadfile": "^1.2.3",
 		"cypress-xpath": "^2.0.1"
 	}
 }
